--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-591-villa-agency
   </div>
   <!-- ***** Preloader End ***** -->
 
-  <div class="sub-header">
+  <!-- <div class="sub-header">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-8">
@@ -62,7 +62,7 @@ https://templatemo.com/tm-591-villa-agency
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
@@ -78,8 +78,8 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="index.html" class="active">Home</a></li>
-                      <li><a href="properties.html">Properties</a></li>
-                      <li><a href="property-details.html">Property Details</a></li>
+                      <li><a href="properties.html">About</a></li>
+                      <li><a href="property-details.html">Products</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
                       <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
                   </ul>   
@@ -121,7 +121,7 @@ https://templatemo.com/tm-591-villa-agency
 			<div class="row">
 				<div class="col-lg-4 offset-lg-4">
 					<div class="section-heading text-center">
-						<h6>| Video View</h6>
+						<h6>| Stones and minerals</h6>
 						<h2>Get Closer View & Different Feeling</h2>
 					</div>
 				</div>
@@ -134,9 +134,28 @@ https://templatemo.com/tm-591-villa-agency
 			<div class="row">
 				<div class="col-lg-10 offset-lg-1">
 					<div class="video-frame">
-						<img src="assets/images/video-frame.jpg" alt="">
-						<a href="https://youtube.com" target="_blank"><i class="fa fa-play"></i></a>
-					</div>
+						<div class="main-banner">
+							<div class="owl-carousel owl-banner">
+								<div class="item item-1">
+									<div class="header-text">
+										<!-- <span class="category">Toronto, <em>Canada</em></span> -->
+										<h2>Get the Best Stones</h2>
+									</div>
+								</div>
+								<div class="item item-2">
+									<div class="header-text">
+										<!-- <span class="category">Melbourne, <em>Australia</em></span> -->
+										<h2>Get the best Stones</h2>
+									</div>
+								</div>
+								<div class="item item-3">
+									<div class="header-text">
+										<!-- <span class="category">Miami, <em>South Florida</em></span> -->
+										<h2>Get the best Stones</h2>
+									</div>
+								</div>
+							</div>
+						</div>
 				</div>
 			</div>
 		</div>
@@ -150,7 +169,7 @@ https://templatemo.com/tm-591-villa-agency
 							<div class="col-lg-4">
 								<div class="counter">
 									<h2 class="timer count-title count-number" data-to="34" data-speed="1000"></h2>
-									<p class="count-text ">Buildings<br>Finished Now</p>
+									<p class="count-text ">Projectss<br>Finished Now</p>
 								</div>
 							</div>
 							<div class="col-lg-4">
@@ -162,7 +181,7 @@ https://templatemo.com/tm-591-villa-agency
 							<div class="col-lg-4">
 								<div class="counter">
 									<h2 class="timer count-title count-number" data-to="24" data-speed="1000"></h2>
-									<p class="count-text ">Awwards<br>Won 2023</p>
+									<p class="count-text ">Clients<br>So far</p>
 								</div>
 							</div>
 						</div>
@@ -588,7 +607,7 @@ https://templatemo.com/tm-591-villa-agency
         <div class="col-lg-4 offset-lg-4">
           <div class="section-heading text-center">
             <h6>| Contact Us</h6>
-            <h2>Get In Touch With Our Agents</h2>
+            <h2>Get In Touch</h2>
           </div>
         </div>
       </div>
