--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@ https://templatemo.com/tm-591-villa-agency
 								<div class="item item-1">
 									<div class="header-text">
 										<!-- <span class="category">Toronto, <em>Canada</em></span> -->
-										<h2>Get the Best Stones</h2>
+										<h2>Get the Best Minerals</h2>
 									</div>
 								</div>
 								<div class="item item-2">
 									<div class="header-text">
 										<!-- <span class="category">Melbourne, <em>Australia</em></span> -->
-										<h2>Get the best Stones</h2>
+										<h2>Get the best Minerals</h2>
 									</div>
 								</div>
 								<div class="item item-3">
 									<div class="header-text">
 										<!-- <span class="category">Miami, <em>South Florida</em></span> -->
-										<h2>Get the best Stones</h2>
+										<h2>Get the best Minerals</h2>
 									</div>
 								</div>
 							</div>
