--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Mattmans Minerals</title>
+    <title>Mattmans Minerals Pvt.ltd.</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -78,10 +78,10 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="index.html" class="active">Home</a></li>
-                      <li><a href="properties.html">About</a></li>
-                      <li><a href="property-details.html">Products</a></li>
-                      <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
+                      <li><a href="#featured">About</a></li>
+                      <li><a href="">Products</a></li>
+                      
+                      <li><a href="contact.html"><i class="fa fa-calendar"></i> Contact Us</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -169,7 +169,7 @@ https://templatemo.com/tm-591-villa-agency
 							<div class="col-lg-4">
 								<div class="counter">
 									<h2 class="timer count-title count-number" data-to="34" data-speed="1000"></h2>
-									<p class="count-text ">Projectss<br>Finished Now</p>
+									<p class="count-text ">Projects<br>Finished Now</p>
 								</div>
 							</div>
 							<div class="col-lg-4">
@@ -178,10 +178,10 @@ https://templatemo.com/tm-591-villa-agency
 									<p class="count-text ">Years<br>Experience</p>
 								</div>
 							</div>
-							<div class="col-lg-4">
+							<div class="col-lg-4" id="featured">
 								<div class="counter">
 									<h2 class="timer count-title count-number" data-to="24" data-speed="1000"></h2>
-									<p class="count-text ">Clients<br>So far</p>
+									<p class="count-text ">Clients<br>Satisfied</p>
 								</div>
 							</div>
 						</div>
@@ -192,7 +192,7 @@ https://templatemo.com/tm-591-villa-agency
 	</div>
 
 
-  <div class="featured section">
+  <div class="featured section" >
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
