--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@ https://templatemo.com/tm-591-villa-agency
   </div> -->
 	<div class="video section videosec">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 offset-lg-4">
+			<div class="row hero-section">
+				<div class="col-lg-6 text-center">
 					<div class="section-heading text-center">
 						<h6>| Stones and minerals</h6>
-						<h2>Get Closer View & Different Feeling</h2>
+						<h2><span style="color: #F35525; text-transform: uppercase;">Unearth the Finest:</span> Your Source for Premium Industrial Minerals!</h2>
 					</div>
 				</div>
 			</div>
@@ -139,19 +139,19 @@ https://templatemo.com/tm-591-villa-agency
 								<div class="item item-1">
 									<div class="header-text">
 										<!-- <span class="category">Toronto, <em>Canada</em></span> -->
-										<h2>Get the Best Stones</h2>
+										<h2>Get the <span style="color: #F35525;">Best</span> Stones</h2>
 									</div>
 								</div>
 								<div class="item item-2">
 									<div class="header-text">
 										<!-- <span class="category">Melbourne, <em>Australia</em></span> -->
-										<h2>Get the best Stones</h2>
+										<h2>Get the <span style="color: #F35525;">Best</span> Stones</h2>
 									</div>
 								</div>
 								<div class="item item-3">
 									<div class="header-text">
 										<!-- <span class="category">Miami, <em>South Florida</em></span> -->
-										<h2>Get the best Stones</h2>
+										<h2>Get the <span style="color: #F35525;">Best</span> Stones</h2>
 									</div>
 								</div>
 							</div>
