--- a/index.html
+++ b/index.html
@@ -600,6 +600,25 @@ https://templatemo.com/tm-591-villa-agency
       </div>
     </div>
   </div> -->
+  <section style="background-color: #f35525;">
+    <div class="container">
+      <div class="row align-items-center d-flex">
+        <div class="col-lg-6 col-md-6">
+          <div>
+            <h1>Contact Us </h1>
+            <p style="font-size: 21px;">Let's take the AI prompt game to the next level!</p>
+          </div>
+        </div>
+        <div class="col-lg-6 justify-content-center p-5">
+          <div class=" justify-content-center">
+            <div class="d-flex align-items-center">
+              <a href="" class="btn btn-outline-light rounded-pill text-dark text-center">Become a Seller</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <div class="contact section">
     <div class="container">
