--- a/index.html
+++ b/index.html
@@ -601,18 +601,18 @@ https://templatemo.com/tm-591-villa-agency
     </div>
   </div> -->
   <section style="background-color: #f35525;">
-    <div class="container">
+    <div class="container" >
       <div class="row align-items-center d-flex">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-9 col-md-9">
           <div>
-            <h1>Contact Us </h1>
-            <p style="font-size: 21px;">Let's take the AI prompt game to the next level!</p>
+            <h1>Request Information</h1>
+            <p style="font-size: 21px;">Inquire about Our Offerings</p>
           </div>
         </div>
-        <div class="col-lg-6 justify-content-center p-5">
+        <div class="col-lg-3 justify-content-center p-5">
           <div class=" justify-content-center">
             <div class="d-flex align-items-center">
-              <a href="" class="btn btn-outline-light rounded-pill text-dark text-center">Become a Seller</a>
+              <a href="" class="btn btn-outline-light rounded-pill text-dark text-center">Contact Us</a>
             </div>
           </div>
         </div>
@@ -632,8 +632,49 @@ https://templatemo.com/tm-591-villa-agency
       </div>
     </div>
   </div>
+  <section style="background-color: #f35525;">
+    <div class="container">
+      <div class="row align-items-center d-flex">
+        <div class="col-lg-9 col-md-9">
+          <div>
+            <h1>Request Information</h1>
+            <p style="font-size: 21px;">Inquire about Our Offerings</p>
+          </div>
+        </div>
+        <div class="col-lg-3 justify-content-center p-5">
+          <div class=" justify-content-center">
+            <div class="d-flex align-items-center">
+              <a href="" class="btn btn-outline-light rounded-pill text-dark text-center">Contact Us</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <div class="contact-content">
+   
+      <!-- <div class="contact-content" style="background-color: #f35525;">
+        <div class="container">
+        <div class="row align-items-center d-flex">
+          <div class="col-lg-9 col-md-9">
+            <div>
+              <h1>Request Information</h1>
+              <p style="font-size: 21px;">Inquire about Our Offerings</p>
+            </div>
+          </div>
+          <div class="col-lg-3 justify-content-center p-5">
+            <div class=" justify-content-center">
+              <div class="d-flex align-items-center">
+                <a href="" class="btn btn-outline-light rounded-pill text-dark text-center">Contact Us</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  -->
+
+
+  <!-- <div class="contact-content">
     <div class="container">
       <div class="row">
         <div class="col-lg-7">
@@ -692,7 +733,7 @@ https://templatemo.com/tm-591-villa-agency
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <footer>
     <div class="container">
