--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ https://templatemo.com/tm-591-villa-agency
       <div class="row">
         <div class="col-lg-4">
           <div class="left-image">
-            <img src="assets/images/featured.jpg" alt="">
-            <a href="property-details.html"><img src="assets/images/featured-icon.png" alt="" style="max-width: 60px; padding: 0px;"></a>
+            <img src="assets/images/featured-1.jpg" alt="">
+            <a href="property-details.html"><img src="assets/images/crystal-icon-1.png" alt="" style="max-width: 60px; padding: 0px;"></a>
           </div>
         </div>
         <div class="col-lg-5">
@@ -270,7 +270,7 @@ https://templatemo.com/tm-591-villa-agency
           <div class="info-table">
             <ul>
               <li>
-                <img src="assets/images/info-icon-01.png" alt="" style="max-width: 52px;">
+                <img src="assets/images/premium-icon.png" alt="" style="max-width: 52px;">
                 <h4>Premium Quality<br><span>Industrial Minerals</span></h4>
               </li>
               <li>
