--- a/index.html
+++ b/index.html
@@ -274,15 +274,15 @@ https://templatemo.com/tm-591-villa-agency
                 <h4>Premium Quality<br><span>Industrial Minerals</span></h4>
               </li>
               <li>
-                <img src="assets/images/info-icon-02.png" alt="" style="max-width: 52px;">
+                <img src="assets/images/test-icon.png" alt="" style="max-width: 42px; padding-left: 8px;">
                 <h4>In-House Testing<br><span>Advanced Production</span></h4>
               </li>
               <li>
-                <img src="assets/images/info-icon-03.png" alt="" style="max-width: 52px;">
+                <img src="assets/images/quality-control.png" alt="" style="max-width: 42px; padding-left: 8px;">
                 <h4>Quality Control<br><span>Talented Professionals</span></h4>
               </li>
               <li>
-                <img src="assets/images/info-icon-04.png" alt="" style="max-width: 52px;">
+                <img src="assets/images/grade-icon.png" alt="" style="max-width: 52px;">
                 <h4>Custom Grades<br><span>Customer-Centric</span></h4>
               </li>
             </ul>
@@ -378,19 +378,20 @@ https://templatemo.com/tm-591-villa-agency
               <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="appartment" role="tabpanel" aria-labelledby="appartment-tab">
                   <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-lg-4">
 					<div class="info-table">
 						<ul>
 							<li><span>Crude Vermiculite</span></li>
-							<li>Loose Bulk Density<br><span>700-1050 kg/m³</span></li>
+              <br>
+							<li>Loose Bulk Density<span>700-1050 kg/m³</span></li>
 							<li>Number of grades<span>5</span></li>
-							<li>Coarsest grade<br><span>1mm-7mm</span></li>
-							<li>Finest grade<br><span> 0.710mm-0.250mm</span><br></li>
+							<li>Coarsest grade<span>1mm-7mm</span></li>
+							<li>Finest grade<span> 0.710mm-0.250mm</span><br></li>
 						</ul>
 					</div>
 
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
                       <img src="assets/images/prod-1.jpg" alt="">
                     </div>
                     <div class="col-lg-3">
