--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ https://templatemo.com/tm-591-villa-agency
                     </div>
                   </div>
                 </div>
-                <div class="tab-pane fade" id="penthouse" role="tabpanel" aria-labelledby="penthouse-tab">
+                <!-- <div class="tab-pane fade" id="penthouse" role="tabpanel" aria-labelledby="penthouse-tab">
                   <div class="row">
                     <div class="col-lg-3">
                       <div class="info-table">
@@ -469,7 +469,7 @@ https://templatemo.com/tm-591-villa-agency
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -629,10 +629,23 @@ https://templatemo.com/tm-591-villa-agency
             <h2>Get In Touch</h2>
           </div>
         </div>
+        <div class="col-lg-8 col-md-8">
+          <div section-heading text-center>
+            <h1>Request Information</h1>
+            <p style="font-size: 21px;">Inquire about Our Offerings</p>
+          </div>
+        </div>
+        <div class="col-lg-3 justify-content-center p-5">
+          <div class=" justify-content-center">
+            <div class="d-flex align-items-center">
+              <a href="" class="btn btn-outline-light rounded-pill text-dark text-center">Contact Us</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <section style="background-color: #f35525;">
+ 
     <div class="container">
       <div class="row align-items-center d-flex">
         <div class="col-lg-9 col-md-9">
@@ -650,7 +663,7 @@ https://templatemo.com/tm-591-villa-agency
         </div>
       </div>
     </div>
-  </section>
+
 
    
       <!-- <div class="contact-content" style="background-color: #f35525;">
