--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,12 @@ https://templatemo.com/tm-591-villa-agency
             <h6>| Contact Us</h6>
             <h2>Get In Touch With Our Agents</h2>
           </div>
-          <p>When you really need to download free CSS templates, please remember our website TemplateMo. Also, tell your friends about our website. Thank you for visiting. There is a variety of Bootstrap HTML CSS templates on our website. If you need more information, please contact us.</p>
+          <p>We value your connection and are eager to hear from you. Our team of dedicated agents is readily available to assist
+          with any inquiries, feedback, or support you may require.<br><br>
+        We are committed to ensuring a prompt and helpful response, aiming to address your needs efficiently. Your communication
+        matters to us, and we look forward to connecting with you. Please feel free to contact us via phone, email, or by
+        filling out the form below. Thank you for considering us as your point of contact, and we appreciate the opportunity to
+        assist you.</p>
           <div class="row">
             <div class="col-lg-12">
               <div class="item phone">
