--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ https://templatemo.com/tm-591-villa-agency
               <div class="col-lg-3  p-5">
                 <div class=" justify-content-center">
                   <div class="d-flex align-items-center">
-                    <a href="" class="btn btn-outline-light rounded-pill text-dark text-center">Contact</a>
+                    <a href="contact.html" class="btn btn-outline-light rounded-pill text-dark text-center">Contact</a>
                   </div>
                 </div>
               </div>
