--- a/contact.html
+++ b/contact.html
@@ -116,21 +116,22 @@ https://templatemo.com/tm-591-villa-agency
           </div>
           <p>We value your connection and are eager to hear from you. Our team of dedicated agents is readily available to assist
           with any inquiries, feedback, or support you may require.<br><br>
-        We are committed to ensuring a prompt and helpful response, aiming to address your needs efficiently. Your communication
-        matters to us, and we look forward to connecting with you. Please feel free to contact us via phone, email, or by
+         Please feel free to contact us via phone, email, or by
         filling out the form below. Thank you for considering us as your point of contact, and we appreciate the opportunity to
         assist you.</p>
           <div class="row">
             <div class="col-lg-12">
-              <div class="item phone">
+              <div class="item phone col-lg-12">
                 <img src="assets/images/phone-icon.png" alt="" style="max-width: 52px;">
-                <h6>010-020-0340<br><span>Phone Number</span></h6>
+                
+                <h6>+91 9495125384<br><span>Phone Number</span></h6>
               </div>
             </div>
-            <div class="col-lg-12">
-              <div class="item email">
-                <img src="assets/images/email-icon.png" alt="" style="max-width: 52px;">
-                <h6>info@villa.co<br><span>Business Email</span></h6>
+            <div class="col-lg-12  ">
+              <div class="item email col-lg-12" >
+                <img src="assets/images/email-icon.png" alt="" style="max-width: 52px; margin-bottom: 10px;">
+                
+                <h6>mattmansminerals@gmail.com<br><span>Business Email</span></h6>
               </div>
             </div>
           </div>
@@ -172,7 +173,7 @@ https://templatemo.com/tm-591-villa-agency
         </div>
         <div class="col-lg-12">
           <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12469.776493332698!2d-80.14036379941481!3d25.907788681148624!2m3!1f357.26927939317244!2f20.870722720054623!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1sen!2sth!4v1642869952544!5m2!1sen!2sth" width="100%" height="500px" frameborder="0" style="border:0; border-radius: 10px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.9611668368366!2d76.31900007480971!3d9.937189174112799!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0873015d2548cf%3A0x4b83ad1b22c92dfb!2sVTJ%20Enclave%20Rd%2C%20Maradu%2C%20Ernakulam%2C%20Kochi%2C%20Kerala%20682304!5e0!3m2!1sen!2sin!4v1699594578909!5m2!1sen!2sin" width="100%" height="500px" frameborder="0" style="border:0; border-radius: 10px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);" allowfullscreen=""></iframe>
           </div>
         </div>
       </div>
