contact styles fix

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ https://templatemo.com/tm-591-villa-agency
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <h3><img src="assets/images/crystal-icon.png" alt="">Mattmans Minerals</h3>
+                        <h3>Mattmans Minerals</h3>
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
