--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ https://templatemo.com/tm-591-villa-agency
           <div class="item phone col-lg-12">
             <img src="assets/images/phone-icon.png" alt="" style="max-width: 52px; margin-bottom: 10px;">
             <div>
-              <h5 class="text-center">+91 9495125384</h5>
+              <a href="tel:9495125384"><h5 class="text-center">+91 9495125384</h5></a>
               <p style="color: #aaaaaa;">Phone Number</p>
             </div>
           </div>
@@ -668,7 +668,7 @@ https://templatemo.com/tm-591-villa-agency
           <div class="item email col-lg-12" >
             <img src="assets/images/email-icon.png" alt="" style="max-width: 52px; margin-bottom: 26px; ">
             <div>
-              <h5>mattmansminerals@gmail.com</h5>
+              <a href="mailto:mattmansminerals@gmail.com"><h5>mattmansminerals@gmail.com</h5></a>
               <p style="color: #aaaaaa;">Business Email</p>
             </div>
           </div>
