navbar route fix

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@ https://templatemo.com/tm-591-villa-agency
               <li><a href="index.html" class="active">Home</a></li>
               <li><a href="index.html#featured">About</a></li>
               <li><a href="index.html#products1">Products</a></li>
-
+              <li class="d-md-none"><a href="contact.html">Contact Us</a></li>
               <li><a href="contact.html"><i class="fa fa-calendar"></i> Contact Us</a></li>
             </ul>
             <a class='menu-trigger'>
