--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="index.html" class="active">Home</a></li>
-                      <li><a href="#featured">About</a></li>
-                      <li><a href="#products1">Products</a></li>
-                      
+                      <li><a href="#featured">About Us</a></li>
+                      <li><a href="#products1">Our Products</a></li>
+                      <li class="d-md-none"><a href="contact.html">Contact Us</a></li>
                       <li><a href="contact.html"><i class="fa fa-calendar"></i> Contact Us</a></li>
                   </ul>   
                     <a class='menu-trigger'>
