contact page bug fix

--- a/contact.html
+++ b/contact.html
@@ -129,9 +129,9 @@ https://templatemo.com/tm-591-villa-agency
             </div>
             <div class="col-lg-12 ">
               <div class="item email col-lg-12" >
-                <img src="assets/images/email-icon.png" alt="" style="max-width: 52px; margin-bottom: 10px;">
+                <img src="assets/images/email-icon.png" alt="" style="max-width: 47px; margin-bottom: 10px;">
                 
-                <h6>mattmansminerals@gmail.com<br><span>Business Email</span></h6>
+                <h6 style="font-size: 14px; font-weight:500;">mattmansminerals@gmail.com<br><span>Business Email</span></h6>
               </div>
             </div>
           </div>
